k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: scribe-demo
  labels:
    name: scribe-demo
    app: scribe-demo
