k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: scribe-demo-service
  labels:
    app: scribe-demo
spec:
  type: ClusterIP
  ports:
  - port: 3001
    targetPort: 3000
  selector:
    app: scribe-demo
